# Ampharos

./: MANIFEST.in  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  publish.yml
ampharos/: __init__.py  search.py  setup.py  tables.py  types.py
ampharos/data/: abilities.json  items.json  moves.json  pokemon.json  pokemonabilities.json  pokemonbasestats.json  pokemondexentries.json  pokemonevolutions.json  pokemonnames.json  pokemontypes.json  types.json
docs/: api.rst  conf.py  index.rst  req.txt  types.rst
docs/extensions/: builder.py  details.py
tests/: test_a_linters.py  test_b_connection.py  test_c_create.py  test_d_search.py  utils.py
