[tool.poetry]
name = "Ampharos"
version = "2.0.1"
description = "A Pokemon Database for Donphan"
authors = ["bijij <josh@josh-is.gay>"]
license = "MIT"
readme = "README.rst"
include = ["ampharos/data/*"]
packages = [
  { include = "ampharos" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
donphan = "^4.5.0"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
mypy = ">=0.800"

[tool.black]
line-length = 119
target-version = ["py37", "py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
